Remove HTTP password feature
This change removes the deprecated HTTP password feature.
This change should only be merged after the users had enough
time to migrate to auth tokens.

Change-Id: Ib251289fbfbee416f61904f1a64771821fcc1f56